Project 0/CustomPackage/main/default/objects/Game_Account__c/fields/About_ME__c.field-meta.xml
<CustomField>
    <fullName>About_ME__c</fullName>
    <label>About Me</label>
    <type>TextArea</type>
</CustomField>