Project 0/CustomPackage/main/default/objects/Game_Account__c/fields/Account_Password__c.field-meta.xml
<CustomField>
    <fullName>Account_Password__c</fullName>
    <label>Account Password</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>