Project 0/CustomPackage/main/default/objects/Game_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <defaultValue>&quot;Gamer&quot;</defaultValue>
    <label>Account Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gamer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>