Project 0/CustomPackage/main/default/objects/Game_Account__c/fields/Game_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Game_Account_Number__c</fullName>
    <displayFormat>GameAccount-{00000000}</displayFormat>
    <label>Game Account Number</label>
    <type>AutoNumber</type>
</CustomField>