Project 0/CustomPackage/main/default/objects/Game_Account__c/fields/My_Game__c.field-meta.xml
<CustomField>
    <fullName>My_Game__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Game</label>
    <referenceTo>My_Games__c</referenceTo>
    <relationshipLabel>Game Accounts</relationshipLabel>
    <relationshipName>Game_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>