Project 0/CustomPackage/main/default/objects/Game_Account__c/validationRules/PhoneNumberFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNumberFormat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(REGEX(Phone_Number__c, &quot;\\D*?(\\d\\D*?){10}&quot;)),  NOT(ISBLANK(Phone_Number__c))  )</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Phone number in wrong format. Please change to (XXX)-XXX-XXXX</errorMessage>
</ValidationRule>