Project 0/CustomPackage/main/default/objects/Game_Account__c/validationRules/ZipCodeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipCodeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Country__c , &quot;United States of America (USA)&quot;),  NOT(REGEX( Zip_Code__c ,&quot;\\d{5}(-\\d{4})?&quot;)),
NOT(ISBLANK( Zip_Code__c ))  )</errorConditionFormula>
    <errorDisplayField>Zip_Code__c</errorDisplayField>
    <errorMessage>Zip Code Wrong Format.</errorMessage>
</ValidationRule>